{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 44,
  "lineage": "56fd5fc4-6c64-2632-8742-bbc12fc63d2b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "portfolio_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:339284817300:instance/i-0b315c01448d486ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b315c01448d486ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "devops-portfolio-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070df2fbc29063bef",
            "private_dns": "ip-10-0-1-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.119",
            "public_dns": "ec2-34-235-121-255.compute-1.amazonaws.com",
            "public_ip": "34.235.121.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03fa4d1dc4cb4707d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000d6eef5dd6fd9d8",
            "tags": {
              "Name": "devops-portfolio-server"
            },
            "tags_all": {
              "Name": "devops-portfolio-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ee15ab28a7a8f9f2"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.portfolio_key",
            "aws_security_group.portfolio_sg",
            "aws_subnet.portfolio_public_subnet",
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "portfolio_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339284817300:internet-gateway/igw-0b96a436f963782c8",
            "id": "igw-0b96a436f963782c8",
            "owner_id": "339284817300",
            "tags": {
              "Name": "portfolio_igw",
              "Project": "devops-portfolio"
            },
            "tags_all": {
              "Name": "portfolio_igw",
              "Project": "devops-portfolio"
            },
            "vpc_id": "vpc-0ba758e5d9ab8f85d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "portfolio_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339284817300:route-table/rtb-0e12a36be846551d7",
            "id": "rtb-0e12a36be846551d7",
            "owner_id": "339284817300",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b96a436f963782c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "portfolio_public_rt"
            },
            "tags_all": {
              "Name": "portfolio_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba758e5d9ab8f85d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.portfolio_internet_gateway",
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038652bffd7ab0b49",
            "route_table_id": "rtb-0e12a36be846551d7",
            "subnet_id": "subnet-000d6eef5dd6fd9d8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.portfolio_internet_gateway",
            "aws_route_table.portfolio_route_table",
            "aws_subnet.portfolio_public_subnet",
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "portfolio_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339284817300:security-group/sg-0ee15ab28a7a8f9f2",
            "description": "Allow inbound traffic for web API and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee15ab28a7a8f9f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "FastAPI application port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-portfolio-sg",
            "name_prefix": "",
            "owner_id": "339284817300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-portfolio-sg"
            },
            "tags_all": {
              "Name": "devops-portfolio-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba758e5d9ab8f85d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "portfolio_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339284817300:subnet/subnet-0caabc7a02baaaa07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caabc7a02baaaa07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339284817300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio_private_subnet",
              "Project": "devops-portfolio"
            },
            "tags_all": {
              "Name": "portfolio_private_subnet",
              "Project": "devops-portfolio"
            },
            "vpc_id": "vpc-0ba758e5d9ab8f85d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "portfolio_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339284817300:subnet/subnet-000d6eef5dd6fd9d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000d6eef5dd6fd9d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339284817300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio_public_subnet",
              "Project": "devops-portfolio"
            },
            "tags_all": {
              "Name": "portfolio_public_subnet",
              "Project": "devops-portfolio"
            },
            "vpc_id": "vpc-0ba758e5d9ab8f85d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.portfolio_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "portfolio_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339284817300:vpc/vpc-0ba758e5d9ab8f85d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0830f75b68cd4b1dc",
            "default_route_table_id": "rtb-0294c9042e93510bd",
            "default_security_group_id": "sg-0c9e8c6b4c9e7a4a0",
            "dhcp_options_id": "dopt-0072dd8ffab1f30f5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba758e5d9ab8f85d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0294c9042e93510bd",
            "owner_id": "339284817300",
            "tags": {
              "Name": "portfolio_vpc",
              "Project": "devops-portfolio"
            },
            "tags_all": {
              "Name": "portfolio_vpc",
              "Project": "devops-portfolio"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}